websocket_server/err.txt
Traceback (most recent call last):
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1043, in create_server
    sock.bind(sa)
OSError: [Errno 98] Address already in use

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "socket_server.py", line 316, in <module>
    main()
  File "socket_server.py", line 299, in main
    asyncio.get_event_loop().run_until_complete(room_info_server)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 466, in run_until_complete
    return future.result()
  File "/usr/lib/python3.6/site-packages/websockets/server.py", line 365, in serve
    server = yield from loop.create_server(factory, host, port, **kwds)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1047, in create_server
    % (sa, err.strerror.lower()))
OSError: [Errno 98] error while attempting to bind on address ('0.0.0.0', 5678): address already in use
Traceback (most recent call last):
  File "socket_server.py", line 7, in <module>
    from server_tools import *
  File "/home/mikhail/GitHub/labyrinth-project/websocket_server/server_tools.py", line 65
    "is_here_enemy": 0,
                  ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1043, in create_server
    sock.bind(sa)
OSError: [Errno 98] Address already in use

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "socket_server.py", line 316, in <module>
    main()
  File "socket_server.py", line 299, in main
    asyncio.get_event_loop().run_until_complete(room_info_server)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 466, in run_until_complete
    return future.result()
  File "/usr/lib/python3.6/site-packages/websockets/server.py", line 365, in serve
    server = yield from loop.create_server(factory, host, port, **kwds)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1047, in create_server
    % (sa, err.strerror.lower()))
OSError: [Errno 98] error while attempting to bind on address ('0.0.0.0', 5678): address already in use
Traceback (most recent call last):
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1043, in create_server
    sock.bind(sa)
OSError: [Errno 98] Address already in use

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "socket_server.py", line 316, in <module>
    main()
  File "socket_server.py", line 299, in main
    asyncio.get_event_loop().run_until_complete(room_info_server)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 466, in run_until_complete
    return future.result()
  File "/usr/lib/python3.6/site-packages/websockets/server.py", line 365, in serve
    server = yield from loop.create_server(factory, host, port, **kwds)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1047, in create_server
    % (sa, err.strerror.lower()))
OSError: [Errno 98] error while attempting to bind on address ('0.0.0.0', 5678): address already in use
Traceback (most recent call last):
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1043, in create_server
    sock.bind(sa)
OSError: [Errno 98] Address already in use

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "socket_server.py", line 316, in <module>
    main()
  File "socket_server.py", line 299, in main
    asyncio.get_event_loop().run_until_complete(room_info_server)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 466, in run_until_complete
    return future.result()
  File "/usr/lib/python3.6/site-packages/websockets/server.py", line 365, in serve
    server = yield from loop.create_server(factory, host, port, **kwds)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1047, in create_server
    % (sa, err.strerror.lower()))
OSError: [Errno 98] error while attempting to bind on address ('0.0.0.0', 5678): address already in use
Traceback (most recent call last):
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1043, in create_server
    sock.bind(sa)
OSError: [Errno 98] Address already in use

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "socket_server.py", line 316, in <module>
    main()
  File "socket_server.py", line 299, in main
    asyncio.get_event_loop().run_until_complete(room_info_server)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 466, in run_until_complete
    return future.result()
  File "/usr/lib/python3.6/site-packages/websockets/server.py", line 365, in serve
    server = yield from loop.create_server(factory, host, port, **kwds)
  File "/usr/lib/python3.6/asyncio/base_events.py", line 1047, in create_server
    % (sa, err.strerror.lower()))
OSError: [Errno 98] error while attempting to bind on address ('0.0.0.0', 5678): address already in use
